# rfcalc

./: .env  .gitignore  LICENSE  Readme.md  pyproject.toml  run.py  run.spec
src/UnitConverter/: base_converter.py  eirp_converter.py  rf_converter.py  rf_util.py  temp_converter.py
src/View/: beamwidth_frame.py  eirp_frame.py  field_strength_frame.py  interpolate_frame.py  limit_convert_frame.py  main_view.py  sidebar_frame.py  validators.py
test/: eirp_frame_test.py  test_field_strength_converter.py  test_radiated_power_converter.py  test_rf_util.py  test_temp_converter.py
