[project]
name = "rfcalc"
version = "0.1.0"
description = "Add your description here"
authors = [
  { name = "William Alam" }
]
requires-python = ">=3.8"
dependencies = [
    "customtkinter==5.2.2",
    "pytest==8.4.1",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["View", "UnitConverter"]
package-dir = {"" = "src"}