[project]
name = "rfcalc"
version = "0.1.0"
description = "Various calculator related to RF measurement"
authors = [
  { name = "William Alam" }
]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
dependencies = [
    "customtkinter==5.2.2",
    "pytest==8.4.1",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]